0.13.3.AA (Pre-Release):
-----------------------
- Synced with Upstream v0.13.3
- Adds `DisableNvramPanicLog` Feature
  * Sets a MacOS `nvram_paniclog=0` boot argument to disable kernel panic logging to NVRAM
  * Replaces the `PanicFilter` feature which has been removed
- Adds `NvramVariableLimit` Feature
  * Filters NVRAM variable write attempts
  * Variables larger than a specified size are discarded
  * This is activated by a new `nvram_variable_limit` configuration token
- Adds `DecoupleKeyF10` Feature
  * Unlinks the `F10` key from the built in screenshot feature
  * Allows the use of 3rd party screenshot tools that also map the `F10` key
  * The `\` (forward slash) key remains linked to the built in screenshot feature
  * This is activated by a new `decouple_key_f10` configuration token
- Fixes `DisableAMFI` Feature
  * The feature had been disabled under some circumstances
  * This bug was introduced in v0.13.2.AP (Commit 8705fdb)
- Improves `HandleSignedInt` Function
  * Ensures the function always returns a negative value when required
- Improves `FindMenuShortcutEntry` Function
  * Now initially tries a exact match of the stored string against available entries
  * A match against substrings is only tried if an exact match is not found
- Improves Pointer Device Handling
  * Applies workaround for touch mode failure
    - Ref: https://sf.net/p/refind/discussion/general/thread/86f80fa8ef
  * Retionalises pointer priority with `EnableTouch` always having priority over `EnableMouse`
    - Previously depended on order of appearance in configuration file
- Amends CSR Operation Coverage
  * Extends limitation of misc SIP/CSR items to Apple firmware pending review of applicability
- Renames Misc Configuration Tokens
  * `decline_nvramprotect`       to       `decline_nvram_protect`
  * `decline_uefiemulate`        to        `decline_uefi_emulate`
  * `decline_espfilter`          to          `decline_esp_filter`