@@ -421,6 +421,7 @@ typedef struct {
     BOOLEAN           DisableNvramPanicLog;
     BOOLEAN           DecoupleKeyF10;
     BOOLEAN           DisableAMFI;
+    BOOLEAN           EnableMacosFilter;
     BOOLEAN           SupplyNVME;
     BOOLEAN           SupplyAPFS;
     BOOLEAN           SupplyUEFI;
